<resources>
    <string name="app_name">云联APP</string>
    <string name="str_please_waiting">请稍等…</string>
    <string name="str_ensure">确定</string>
    <string name="str_cancel">取消</string>
    <string name="delete">删除</string>
    <string name="editor">编辑</string>
    <string name="build">新建</string>
    <string name="download">下载</string>
    <string name="qr_code_card_tip">扫一扫上面的二维码图案，加我云联账号</string>
    <string name="str_mesage_notify">新消息提醒</string>
    <string name="str_change_password">修改密码</string>
    <string name="str_about_cloud_unite">关于云联</string>
    <string name="str_logout">退出</string>
    <string name="disconnect_server">与服务器失联</string>
    <string name="str_title_personal_info">个人信息</string>
    <string name="draft">[草稿]</string>
    <string name="picture">图片</string>
    <string name="voice">语音</string>
    <string name="sticker">贴图</string>
    <string name="video">视频</string>
    <string name="set_conversation_to_top">置顶聊天</string>
    <string name="cancel_conversation_to_top">取消置顶</string>
    <string name="delete_conversation">删除该聊天</string>
    <string name="send">发送</string>
    <string name="voice_rec">手指上滑，取消发送</string>
    <string name="voice_cancel">松开手指，取消发送</string>
    <string name="voice_short">录音时间太短</string>
    <string name="voice_failure">录音失败！</string>
    <string name="send_audio_fail">发送语音失败，文件长度为0或语音权限没有开启</string>
    <string name="please_to_talk">按住 说话</string>
    <string name="shot">拍摄</string>
    <string name="location">位置</string>
    <string name="red_pack">红包</string>
    <string name="wx_red_pack">微信红包</string>
    <string name="file_out_of_date">文件已过期</string>
    <string name="SET_TEXT_TYPING_TITLE">对方正在输入</string>
    <string name="SET_VOICE_TYPING_TITLE">对方正在讲话</string>
    <string name="album">相册</string>
    <string name="no_support_msg_type">不支持的消息类型</string>
    <string name="are_you_sure_to_clear_msg_record">确定删除聊天记录吗？</string>
    <string name="clear">清空</string>
    <string name="copy">复制</string>
    <string name="send_to_friend">发送给朋友</string>
    <string name="retry">重发</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="save_to_phone">保存到手机</string>
    <string name="delete_contact">删除联系人</string>
    <string name="delete_contact_content">将联系人%1$s删除，将同时删除与该联系人的聊天记录</string>
    <string name="content_no_empty">内容不能为空</string>
    <string name="user_no_found">该用户不存在</string>
    <string name="search_colon">搜索:</string>
    <string name="search">搜索</string>
    <string name="my_chat_account">云联账号:%1$s</string>
    <string name="nickname_colon">昵称:%1$s</string>
    <string name="signature">个性签名</string>
    <string name="area">国家/地区</string>
    <string name="set_alias_and_tag">设置备注和标签</string>
    <string name="send_message">发消息</string>
    <string name="add_to_contact">添加到通讯录</string>
    <string name="alias">备注名</string>
    <string name="new_friend">新的朋友</string>
    <string name="group_cheat">群聊</string>
    <string name="group_tag">标签</string>
    <string name="group_public_number">公众号</string>
    <string name="load_contacts_error">加载联系人失败</string>
    <string name="count_of_contacts">%1$d位联系人</string>
    <string name="tag">标签</string>
    <string name="add_friend">添加朋友</string>
    <string name="no_recommend_friend">还没有推荐的朋友</string>
    <string name="no_recommend_friend_tip">你可以绑定手机/QQ账号，以便找到更多好友</string>
    <string name="add_phone_contact">添加手机联系人</string>
    <string name="wechat_qq_phone">云联账号</string>
    <string name="agree_friend_fail">同意添加好友失败</string>
    <string name="alias_no_empty">备注名不能为空</string>
    <string name="please_check_net">请检查网络</string>
    <string name="change_success">修改成功</string>
    <string name="change_fail">修改失败</string>
    <string name="sure">确定</string>
    <string name="sure_with_count">确定(%1$d)</string>
    <string name="postscript_tip">你需要发送验证申请，等对方通过</string>
    <string name="str_main_news">资讯</string>
    <string name="str_news_announce"> 我的发布</string>
    <string name="str_publish_success">发布成功</string>
    <string name="str_editor_publish_success">修改发布成功</string>
    <string name="picture_has_save_to">图片已保存至 %s 文件夹</string>
    <string name="str_title_water_detection">水质监测</string>
    <string name="str_title_normal_log">日常日志</string>
    <string name="str_title_address_detail">详细地址</string>
    <string name="str_title_write_remark">填写备注</string>
    <string name="str_title_write_symptom">填写病害症狀</string>
    <string name="str_title_write_type_define">填写用药情况</string>
    <string name="str_title_save">保存</string>
    <string name="str_title_submit">提交</string>
    <string name="str_submit">提交</string>
    <string name="str_title_pond">塘口</string>
    <string name="action_share">分享</string>
    <string name="str_btn_pond">添加塘口</string>
    <string name="str_limit_50">50</string>
    <string name="transition_movie_img">transition_movie_img</string>
    <string name="str_tv_email">邮箱</string>
    <string name="str_tv_hint_email">输入邮箱</string>
    <string name="str_tv_hint_choose_ads">点击选择地址</string>
    <string name="str_tv_hint_detail_ads">点击输入详细地址</string>
    <string name="str_tv_phone">联系方式</string>
    <string name="str_tv_hint_phone">输入联系方式</string>
    <string name="str_tv_rs_man">责任人</string>
    <string name="str_tv_hint_rs_man">点击选择责任人</string>
    <string name="str_tv_depth">深度(米)</string>
    <string name="str_tv_hint_depth">输入深度</string>
    <string name="str_tv_pond_width">宽度(米)</string>
    <string name="str_tv_hint_pond_width">输入宽度</string>
    <string name="str_tv_hint_pond_length">输入长度</string>
    <string name="str_tv_pond_length">长度(米)</string>
    <string name="str_tv_pond_area">养殖面积</string>
    <string name="str_tv_hint_pond_area">输入面积</string>
    <string name="str_tv_pond_name">输入塘口</string>
    <string name="str_format_city_bond">%1$s-%2$s-%3$s</string>
    <string name="str_detail_address">%1$s-%2$s-%3$s %4$s</string>
    <string name="str_pk_title_city">城市选择</string>
    <string name="str_title_manage_pond">塘口管理</string>
    <string name="str_format_pond_detail">长:%1$s米 宽:%2$s米 深:%3$s米 面积:%4$s%5$s</string>
    <string name="str_title_pond_detail">塘口详情</string>
    <string name="str_tv_pond_time">添加时间</string>
    <string name="str_tv_hint_time_add">点击选择时间</string>
    <string name="str_btn_new_publish">新建发布</string>
    <string name="str_title_change_pwd">修改密码</string>
    <string name="str_toast_check_edit">客官请输入内容再提交!</string>
    <string name="str_toast_check_file">客官请输入文件名!</string>
    <string name="str_toast_check_group">客官请输入群聊名称!</string>
    <string name="str_toast_check_phone">客官您输入的手机格式不对!</string>
    <string name="str_toast_check_email">客官您输入的邮箱格式不对!</string>
    <string name="str_title_editor">编辑资料</string>
    <string name="str_hint_email">请输入邮箱</string>
    <string name="str_hint_phone">请输入电话</string>
    <string name="str_hint_company">请输入公司名</string>
    <string name="str_hint_detail_ads">请输入详细地址</string>
    <string name="str_hint_input_address">请录入地址</string>
    <string name="str_hint_input_city">请点击选择地区</string>
    <string name="str_hint_realname">请输入真实姓名</string>
    <string name="str_hint_income">请输入总收入</string>
    <string name="str_hint_file">请输入文件名</string>
    <string name="str_hint_group">请输入群聊名称</string>
    <string name="str_tv_seed_time">时间:</string>
    <string name="log_put_man">养殖户:</string>
    <string name="log_num">投放数量:</string>
    <string name="log_seed_name">种苗名称:</string>
    <string name="log_seed_type">类别:</string>
    <string name="log_pond_name">塘口:</string>
    <string name="str_log_feed_name">投放名称:</string>
    <string name="str_title_feed">投放日志(%s)</string>
    <string name="str_title_feed_empty">投放日志</string>
    <string name="str_title_seed">种苗日志(%s)</string>
    <string name="str_title_seed_empty">种苗日志</string>
    <string name="str_title_water">水质巡视日志(%s)</string>
    <string name="str_title_water_empty">水质巡视日志</string>
    <string name="str_title_device">设备信息日志(%s)</string>
    <string name="str_title_device_empty">设备信息日志</string>
    <string name="str_title_drug">药品日志(%s)</string>
    <string name="str_title_drug_empty">药品日志</string>
    <string name="str_btn_device">添加设备</string>
    <string name="str_choose_pond">选择塘口</string>
    <string name="str_modify_pond">修改塘口</string>
    <string name="str_device_small_range_unit">低值范围(mg/l)</string>
    <string name="str_device_large_range_unit">高值范围(mg/l)</string>
    <string name="str_device_small_range">低值范围</string>
    <string name="str_device_large_range">高值范围</string>
    <string name="str_device_small_range_unit_o2">低值范围(℃)</string>
    <string name="str_device_large_range_unit_o2">高值范围(℃)</string>
    <string name="str_format_temp">%s (℃)</string>
    <string name="str_format_normal_du">%s (mg/l)</string>
    <string name="str_default_name">沧晓</string>
    <string name="str_default_signature">签名嘞?</string>
    <string name="str_me_setting">设置</string>
    <string name="str_me_launch">鱼苗投放</string>
    <string name="str_me_gallery">相册</string>
    <string name="str_me_zxing">扫一扫</string>
    <string name="str_me_weather">天气预报</string>
    <string name="str_me_calendar">日历</string>
    <string name="stv_vice_user_manage">平行用户管理</string>
    <string name="str_allocate_pond">鱼塘管理</string>
    <string name="str_allocate_device">设备管理</string>
    <string name="str_allocate_data">数据管理</string>
    <string name="weather_refreshing">正在更新…</string>
    <string name="weather_post">%1$s发布</string>
    <string name="weather_refresh_succeed">更新成功!</string>
    <string name="sign_update_view">更新View</string>
    <string name="weather_future_weather">未来天气</string>
    <string name="weather_lifeIndexes">生活指数</string>
    <string name="str_toast_location_error">定位失败</string>
    <string name="title_add_seller">添加经销商</string>
    <string name="title_add_farmer">添加养殖户</string>
    <string name="title_add">添加</string>
    <string name="title_add_pond">添加塘口</string>
    <string name="title_next"> 下一步</string>
    <string name="exit_account">退出当前账号</string>
    <string name="exit_app">关闭云联</string>
    <string name="str_add_pondNum">塘号</string>
    <string name="str_add_kindName">分类</string>
    <string name="str_add_detail_address">详细地址</string>
    <string name="str_add_location_name">所在地区</string>
    <string name="str_tv_old_pwd">原始密码</string>
    <string name="str_et_hint_old_pwd">填写原始密码</string>
    <string name="str_tv_new_pwd">新密码</string>
    <string name="str_et_hint_new_pwd">填写新密码</string>
    <string name="str_tv_confirm_pwd">确认密码</string>
    <string name="str_et_hint_confirm_pwd">填写确认密码</string>
    <string name="str_btn_confirm">确定</string>
    <string name="str_btn_add">添加</string>
    <string name="str_tv_loginName">登录名称</string>
    <string name="str_change_pwd_success">修改密码成功</string>
    <string name="str_title_farmer_list">下养殖户列表</string>
    <string name="str_title_zxing">扫一扫</string>
    <string name="str_toast_open_camera_error">打开相机时出错</string>
    <string name="please_choose_one_pond">请选中一个塘口</string>
    <string name="str_review">预览</string>
    <string name="str_please_choose">请选择</string>
    <string name="pic_save_path">已保存至%1$s/%2$s文件下</string>
    <string name="new_cannot_action">未有资讯可操作</string>
    <string name="please_choose_news_item_first">请先选择资讯条目!</string>
    <string name="cannot_move_trick">客官,不能再置顶了！</string>
    <string name="cannot_move_bottom">客官,不能下移了!</string>
    <string name="cannot_move_top">客官,不能上移动了!</string>
    <string name="pond_name_with_pre">*塘号</string>
    <string name="pls_input_pond_name">请输入塘号…</string>
    <string name="pond_category">分类</string>
    <string name="pls_input_pond_cg">请输入分类…</string>
    <string name="cancel">取消</string>
    <string name="vice_login_name">用户账号</string>
    <string name="vice_real_name">用户名称</string>
    <string name="my_display_name_in_group">我在本群中的昵称</string>
    <string name="set_your_display_name_in_group">设置你在群里的昵称，这个昵称只会在这个群内显示</string>
</resources>