<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jit.appcloud.ui.activity.me.ViceUserMgActivity">
    <include
        layout="@layout/include_toolbar"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/common_dimension_30"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dimension_40">
            <TextView
                android:id="@+id/tvViceAdd"
                android:padding="@dimen/common_dimension_5"
                android:text="@string/build"
                android:drawablePadding="@dimen/common_dimension_5"
                android:textSize="@dimen/mediumTextSize"
                android:drawableLeft="@mipmap/ic_device_add"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvViceEditor"
                android:padding="@dimen/common_dimension_5"
                android:layout_marginLeft="@dimen/common_dimension_20"
                android:text="@string/editor"
                android:drawableLeft="@mipmap/ic_device_editor"
                android:drawablePadding="@dimen/common_dimension_5"
                android:textSize="@dimen/mediumTextSize"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvViceDel"
                android:padding="@dimen/common_dimension_5"
                android:layout_marginLeft="@dimen/common_dimension_20"
                android:text="@string/delete"
                android:drawablePadding="@dimen/common_dimension_5"
                android:textSize="@dimen/mediumTextSize"
                android:drawableLeft="@mipmap/ic_feed_del"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:background="@color/bg_line_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dimension_0.5"/>
        <LinearLayout
            android:background="@color/gray4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dimension_45">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent">
                <TextView
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/LargeTextSize"
                    android:textColor="@color/black"
                    android:text="@string/vice_login_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_alignParentRight="true"
                    android:background="@color/bg_line_2"
                    android:layout_width="@dimen/common_dimension_0.5"
                    android:layout_height="match_parent"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent">
                <TextView
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/LargeTextSize"
                    android:textColor="@color/black"
                    android:text="@string/vice_real_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_alignParentRight="true"
                    android:background="@color/bg_line_2"
                    android:layout_width="@dimen/common_dimension_0.5"
                    android:layout_height="match_parent"/>
            </RelativeLayout>


        </LinearLayout>
        <View
            android:background="@color/bg_line_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dimension_0.5"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvViceMg"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>
