<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card"
    android:layout_marginBottom="@dimen/common_dimension_10"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bg_log_item">
        <LinearLayout
            android:layout_width="@dimen/dimen_common_233"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_dimension_15"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumTextSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_tv_seed_time" />
                <TextView
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/SmallTextSize"
                    android:layout_marginLeft="@dimen/common_dimension_90"
                    android:id="@+id/tvLogTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:layout_marginTop="@dimen/common_dimension_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_pond_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumTextSize"/>

                <TextView
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/SmallTextSize"
                    android:layout_marginLeft="@dimen/common_dimension_90"
                    android:id="@+id/tvLogPondName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="@dimen/common_dimension_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_seed_type"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumTextSize"/>

                <TextView
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/SmallTextSize"
                    android:layout_marginLeft="@dimen/common_dimension_90"
                    android:id="@+id/tvLogType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_marginTop="@dimen/common_dimension_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_log_feed_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumTextSize"/>

                <TextView
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/SmallTextSize"
                    android:layout_marginLeft="@dimen/common_dimension_90"
                    android:id="@+id/tvLogName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>



            <RelativeLayout
                android:layout_marginTop="@dimen/common_dimension_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_num"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumTextSize"/>
                <TextView
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/SmallTextSize"
                    android:layout_marginLeft="@dimen/common_dimension_90"
                    android:id="@+id/tvLogSum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="@dimen/common_dimension_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="天气:"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumTextSize"/>
                <TextView
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:hint="未录入天气"
                    android:textSize="@dimen/SmallTextSize"
                    android:layout_marginLeft="@dimen/common_dimension_90"
                    android:id="@+id/tvLogWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_marginTop="@dimen/common_dimension_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_put_man"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mediumTextSize"/>
                <TextView
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/SmallTextSize"
                    android:layout_marginLeft="@dimen/common_dimension_90"
                    android:id="@+id/tvLogMan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>


    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        />

</RelativeLayout>